<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:scrollbars="vertical">

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t1"
               android:clickable="true">
               <TextView
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingStart="16dp"
                   android:paddingRight="16dp"
                   android:layout_height="60dp"
                   android:text="@string/pre_requisites" />
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t2"
               android:layout_below="@id/t1"
               android:clickable="true">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/sai_vrat_story"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingStart="16dp"
                   android:paddingRight="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t3"
               android:layout_below="@id/t2"
               android:clickable="true">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/sai_bhavani"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t4"
               android:layout_below="@id/t3">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/datta_bhavani"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t5"
               android:layout_below="@id/t4">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/shri_sai_chalisa"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t6"
               android:layout_below="@id/t5">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/archana_guru_om"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t7"
               android:layout_below="@id/t6">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/naivedya"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t8"
               android:layout_below="@id/t7">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/arati"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t9"
               android:layout_below="@id/t8">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/eleven_promises"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="70dp"
               android:id="@+id/t10"
               android:layout_below="@id/t9">
               <TextView
                   android:layout_height="60dp"
                   android:text="@string/glossary"
                   android:layout_width="wrap_content"
                   android:textSize="25sp"
                   android:textColor="#080000"
                   android:paddingLeft="16dp"/>
           </android.support.v7.widget.CardView>

       </RelativeLayout>
    </ScrollView>
</RelativeLayout>
